# sample_java

./: README.md  display_model.py  main.py  penguins_onnx.py  penguins_pmml.py  pom.xml  pyproject.toml
java_test/: pom.xml
java_test/main/java/com/example/: PenguinOnnx.java  PenguinPmml.java
model/: modelA.onnx  modelA.pmml  modelB.onnx  modelB.pmml  penguin.onnx  penguin.pmml
src/main/java/com/example/: OnnxTest.java
src/main/resources/: titanic_random_forest.onnx
