[project]
name = "sample-java"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.19.1",
    "packaging>=25.0",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
    "pandas>=2.2.3",
    "sklearn2pmml>=0.99.1",
    "seaborn>=0.13.2",
]
